--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-crown"></i>
-                            <h5>UI/UX Design</h5>
+                            <h5>Blockchain Developer</h5>
                         </div>
                     </div>
                 </div>
