--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Haseeb Ul Islam</h6>
                     <p class="subtitle">Blockchain Developr</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, pariatur, aperiam aut autem voluptas odit. Odio ducimus delectus totam sed aliquam sequi praesentium mollitia, illum repudiandae quidem quod, magni magnam.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius, nam. Quo praesentium qui temporibus voluptatum, facilis aliquid eligendi fugiat beatae neque inventore non. Laborum repellendus consequatur ullam voluptatum asperiores.</p>
+                    <p>I am Haseeb Ul Islam, I am a graduate in Computer Science, I have work experiance, in Blockchain ecosystem, I have two year of experiance.</p> 
+                    
                     <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>                   
                 </div>
             </div>
