--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
             </div>              
             <div class="img-holder">
-                <img src="assets/imgs/man.svg" alt="">
+                <img src="Test/temp_image.JPEG" alt="">
             </div>      
         </div>  
 
